# imgz

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  opennode.py  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  pre-commit.yml
.tickets/: img-2k17.md  img-340r.md  img-7wdj.md  img-d20a.md  img-ds8i.md  img-fw8w.md  img-isll.md  img-kk5r.md  img-lukk.md  img-m8vp.md  img-mtyl.md  img-pufn.md  img-t4yl.md  img-uc1a.md  img-ws5a.md  img-xsp4.md  img-y0t3.md
imgz/: middleware.py  settings.py  urls.py  wsgi.py
main/: admin.py  api.py  fancy_ml.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py  views_payment.py
main/management/commands/: delete_expired_images.py  delete_inactive.py  delete_inactive_users.py  process_images.py
main/migrations/: 0002_image.py  0003_image_format.py  0004_image_size.py  0005_user_upgraded_until.py  0006_auto_20191118_2324.py  0007_image_name.py  0008_user_api_key.py  0009_user_storage_space.py  0010_image_thumbnail_512.py  0011_auto_20191120_1434.py  0012_image_views.py  0013_image_processed.py  0014_auto_20191120_1538.py  0015_user_last_payment.py  0016_auto_20191121_1012.py  0017_auto_20191122_1636.py  0018_auto_20191122_2319.py  0019_auto_20191123_1026.py  0020_auto_20191125_0021.py  0021_image_expires.py  0022_user_stripe_subscription_id.py  0023_user_stripe_subscription_active.py  0024_remove_user_stripe_subscription_active.py  0025_user_features.py  0026_alter_user_first_name.py
main/templatetags/: human_size.py
misc/dokku/: CHECKS  Procfile  nginx.conf.sigil  uwsgi.ini
misc/terraform/: infrastructure.tf
simpleblog/: __init__.py  admin.py  forms.py  models.py  settings.py  urls.py  views.py
simpleblog/migrations/: 0001_initial.py  0002_auto_20201119_2237.py
simpleblog/templates/simpleblog/: post_archive_page.html  post_detail.html  post_detail_page.html  post_list.html  (+1 more)
simpleblog/templatetags/: blog_tags.py
static/css/: bootstrap.min.css  landing.css  style.css
templates/: 404.html  account.html  analytics.html  api.html  base.html  complex_landing.html  faq.html  home.html  image.html  index.html  latest.html  money-safe.html  money.html  paying.html  simple_landing.html  terms.html  thanks.html  unpaid.html  upload.html
templates/fragments/: image_card.html
tests/: client.py  conftest.py  factories.py  helpers.py  test_admin.py  test_self.py  test_wsgi.py
tests/main/: test_api.py  test_management.py  test_models.py  test_templates.py  test_templatetags.py  test_views.py
tests/simpleblog/: test_views.py
