[project]
name = "imgz"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<4.3",
    "django-extensions>=3.2",
    "django-ipware>=2.1.0",
    "django-loginas>=0.3.6",
    "djangoql>=0.17.0",
    "django-redis",
    "django-tokenauth>=0.5.0",
    "ipython",
    "pillow>=8.3.1",
    "psycopg2-binary>=2.9",
    "python-dotenv",
    "requests>=2.22.0,<3",
    "sentry-sdk>=2.0",
    "shortuuid",
    "stripe>=4,<5",
    "uwsgi",
    "werkzeug",
    "whitenoise",
    "opencv-python>=4.5.1,<5",
    "numpy>=1.20.1",
    "django-el-pagination>=3.3",
    "django-markdown-deux>=1.0.5",
    "django-pagedown>=2.2",
]

[dependency-groups]
dev = [
    "bpython",
    "django-stubs>=5.0",
    "mypy",
    "pudb",
    "pytest==7.4.3",
    "coverage==7.2.7",
    "pytest-cov==4.1.0",
    "pytest-django==4.5.2",
    "factory-boy==3.3.0",
]

[tool.ruff]
lint.ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
